# publicdocsafe

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  .zprofile  CLAUDE.md  CRYPTO_DEBUG_GUIDE.md  DOCUMENT_PREVIEW_FIX_SUMMARY.md  DOCUMENT_PREVIEW_UI_FIX_SUMMARY.md  DOCX_ERROR_FIX_VERIFICATION.md  DOCX_PREVIEW_ARCHITECTURE_FIX.md  DOCX_PREVIEW_FIX_COMPLETE.md  DOCX_PREVIEW_FIX_SUMMARY.md  DOCX_PREVIEW_ISSUE_ANALYSIS.md  EC2-AMAZON-LINUX-QUICK-DEPLOY.md  EC2-DEPLOYMENT-GUIDE.md  EMERGENCY_DOCX_FIX_VERIFICATION.md  ENCRYPTION_PREVIEW_FIX_COMPLETE.md  EXTERNAL_SHARE_FIX_COMPLETE.md  EXTERNAL_SHARE_PREVIEW_FIX_COMPLETE.md  FRONTEND_SHARE_HOTFIX.ts  GEMINI.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_EXAMPLE.md  ISSUE_ANALYSIS.md  NON_PDF_PREVIEW_FIXES.md  OFFICE_PREVIEW_REDESIGN_SUMMARY.md  PDF_SPINNER_FIX.tsx  PDF_SPINNER_MINIMAL_FIX.tsx  PREVIEW_ERROR_COMPLETE_ANALYSIS.md  PREVIEW_FIX_COMPLETE.md  RBAC_FIXES_VERIFICATION_COMPLETE.md  README.md  ROLE_BASED_UI_FIX.md  ROLE_BASED_UI_GUIDE.md  ROLE_MANAGEMENT_BUG_FIX_SUMMARY.md  ROLE_MANAGEMENT_FIXES_FINAL.md  ROOT_CAUSE_ANALYSIS.md  SECURE_SHARE_ARCHITECTURE.md  SECURITY_AUDIT_REPORT.md  (+153 more)
backend/: .env.dev  .env.example  .env.prod  Dockerfile  Dockerfile.prod  add_endpoint.py  alembic.ini  assign_admin_role.py  assign_user_roles.py  check_db.py  check_documents.py  check_permissions.py  check_share.py  clear_preview_cache.py  clear_rate_limit.py  create_test_document.py  create_test_encrypted_doc.py  create_test_user.py  create_test_user.sql  debug_routes.py  debug_token.py  fix_admin_roles.py  fix_all_documents.py  fix_decryption_function.py  fix_document_ownership.py  health_check.py  pyproject.toml  pytest.ini  run_server.py  securevault.db  setup_user_encryption.py  simple_verification.py  start_utf8.py  test_complete_api_workflow.py  test_complete_workflow.py  test_document_2.py  test_document_8_auth.py  test_document_8_preview.py  test_exact_ameer.py  test_frontend_token.py  (+19 more)
backend/.claude/: settings.local.json
backend/.claude/agents/: dev-accelerator.md
backend/alembic/: env.py
backend/alembic/versions/: 26aad1922df0_merge_encryption_updates.py  9b7906fd7307_add_encryption_fields_to_users_table.py  a86e3e3c1ac3_add_single_role_policy_constraints.py  add_encryption_password_to_shares.py  add_role_sync_trigger.py  add_salt_to_documents.py  fde1840e117f_add_rbac_tables_for_roles_permissions_.py  fix_ciphertext_field_size.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: config.py  config_override.py  database.py  mfa.py  rbac.py  rbac_init.py  redis.py  security.py  test_auth_override.py  test_security.py
backend/app/middleware/: redirect_debugger.py  security_headers_middleware.py  security_middleware.py
backend/app/models/: __init__.py  document.py  document_backup.py  encryption.py  mfa.py  rbac.py  security.py  token.py  user.py
backend/app/schemas/: __init__.py  admin.py  auth.py  document.py  encryption.py  mfa.py  rbac.py  security.py  templates.py
backend/app/services/: document_service.py  mfa_service.py  preview_service.py  role_sync_service.py  security_service.py  template_service.py
backend/app/utils/: encryption_validation.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/scripts/: create_admin_user.py  init.sql  init_rbac.py  run_tests.py  seed_dev_data.py  test_rbac_api.py  test_rbac_decorators.py
backend/tests/: __init__.py  conftest.py  test_admin_api.py  test_document_api.py  test_document_models.py  test_document_upload.py  test_encryption_api.py
backend/tests/fixtures/: __init__.py  auth_fixtures.py
backend/tests/integration/: __init__.py  test_login_flow.py
docs/: DEPLOYMENT.md  (+7 more)
(+345 files in other folders)
